# LexBridge

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/sample_documents/: LEX-BAF-001.json  LEX-BAF-002.json  LEX-BD-001.json  LEX-BD-002.json  LEX-BD-003.json  LEX-CON-001.json  LEX-CON-002.json  LEX-CON-DE-001.json  LEX-CON-DE-002.json  LEX-CRB-001.json  LEX-CRB-002.json  LEX-CRB-003.json  LEX-CRB-004.json  LEX-DD-001.json  LEX-DD-002.json  LEX-DD-003.json  LEX-INS-001.json  LEX-INS-002.json  LEX-INT-001.json  LEX-INT-002.json  LEX-LIT-001.json  LEX-LIT-002.json  LEX-LIT-003.json  LEX-LIT-004.json  LEX-LIT-005.json  LEX-MEM-001.json  LEX-MEM-002.json  LEX-MEM-003.json  LEX-MRG-001.json  LEX-MRG-002.json  LEX-MRG-003.json  LEX-MRG-004.json  LEX-REG-001.json  LEX-REG-002.json  LEX-REG-003.json  LEX-RISK-001.json  LEX-RISK-002.json  LEX-RISK-DE-001.json  LEX-SCI-001.json  LEX-SCI-002.json  (+9 more)
docs/: ARTICLE.md  TIMELINE.md
docs/synthetic_documents/: LEX-BAF-002.md  LEX-BD-001.md  LEX-BD-002.md  LEX-BD-003.md  LEX-CON-001.md  LEX-CON-002.md  LEX-CON-DE-001.md  LEX-CON-DE-002.md  LEX-DD-001.md  LEX-DD-002.md  LEX-DD-003.md  LEX-INS-001.md  LEX-INS-002.md  LEX-INT-001.md  LEX-INT-002.md  LEX-LIT-002.md  LEX-MEM-001.md  LEX-MEM-002.md  LEX-MEM-003.md  LEX-MRG-003.md  LEX-MRG-004.md  LEX-RISK-001.md  LEX-RISK-002.md  LEX-RISK-DE-001.md
scripts/: download_models.py  generate_sample_documents.py  scrape_real_documents.py  setup_databases.py
src/: config.py
src/agents/: graph_query_agent.py  ingestion_agent.py  risk_analysis_agent.py  semantic_search_agent.py  (+2 more)
(+6 files in other folders)
